<!--
  ~   Copyright 2019 Jeffrey Liu (scubajeffrey@criptext.com)
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<resources>
    <!-- General -->
    <string name="app_name">Setter</string>
    <string name="dict_name">Look up</string>
    <string name="websearch_name">Search in Setter</string>
    <string name="reverseimagesearch_name">Image Search</string>

    <!-- Translator -->
    <string name="translator_header">Translator Setting</string>
    <string name="colordict_fullscreen_key" translatable="false">fullscreen</string>
    <string name="colordict_fullscreen_title">ColorDict run in full screen</string>
    <string name="install_colordict_key" translatable="false">install_colordict</string>
    <string name="colordict_not_installed">Install ColorDict app</string>
    <string name="colordict_intro">An offline dictionary app, respect privacy. Support stardict format dictionaries.</string>
    <string name="url_deepl" translatable="false">https://www.deepl.com/translator#en/</string>
    <string name="url_google_translation" translatable="false">https://translate.google.com/#view=home&amp;op=translate&amp;sl=auto&amp;tl=</string>
    <string name="url_papago_translation" translatable="false">https://papago.naver.com/?sk=auto&amp;tk=ko&amp;hn=0&amp;st=</string>
    <string name="url_urban_dictionary" translatable="false">https://www.urbandictionary.com/define.php?term=</string>
    <string name="url_jikipedia" translatable="false">https://jikipedia.com/search?phrase=</string>
    <string name="jikiName">jikipedia</string>

    <!-- Search Engine -->
    <string name="meta_search_key" translatable="false">META_SEARCH</string>
    <string name="search_engine_key" translatable="false">WEB_SEARCH_ENGINE</string>
    <string name="second_search_engine_key" translatable="false">SECOND_WEB_SEARCH_ENGINE</string>
    <string name="search_engine_header">Web Search Setting</string>
    <string name="meta_search_web_engine_title">Web search engine choice</string>
    <string name="second_meta_search_web_engine_title">Second search engine choice</string>

    <!-- Reverse Image Search -->
    <string name="sogou">Sogou</string>
    <string name="pailitao">Pailitao</string>

    <!-- Direct Search -->
    <string name="edit_search_hint">Search phrase or URL</string>
    <string name="edit_translate_hint">Translate word or sentence</string>
    <string name="meta_search_choice">Search</string>
    <string name="translation_choice">Translate</string>

    <!-- Context Menu -->
    <string name="menuitem_view_hyperlink">Open in App</string>
    <string name="menuitem_share_hyperlink">Share link to</string>
    <string name="menuitem_copy_hyperlink">Copy link</string>
    <string name="menuitem_download_image">Download image</string>
    <string name="menuitem_search_image">Reverse search image</string>
    <string name="menuitem_browser">Open in Browser</string>

    <!-- Setting -->
    <string name="remove_cookie_key" translatable="false">REMOVE_COOKIES</string>
    <string name="remove_cookie_title">Remove All Cookies</string>
    <string name="remove_cookie_summary">Remove all cookies when Setter is closed</string>
    <string name="set_as_assistant_title">Set as default assistant app</string>
    <string name="set_as_assistant_summary">Allow Setter launched on any screen</string>
    <string name="launch_search_key" translatable="false">LAUNCH_SEARCH</string>
    <string name="add_widget_key" translatable="false">ADD_WIDGET</string>
    <string name="add_widget_title">Add widget on home screen</string>
    <string name="add_widget_summary">Launch Setter from home screen</string>
    <string name="search_now_title">Search now!</string>

    <string name="widget_hints">Search by Setter</string>
</resources>
