<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/translator_header">

        <SwitchPreferenceCompat
            app:key="@string/colordict_fullscreen_key"
            app:title="@string/colordict_fullscreen_title"
            app:isPreferenceVisible="false" />

        <Preference
            app:key="@string/install_colordict_key"
            app:title="@string/colordict_not_installed"
            app:summary="@string/colordict_intro"
            app:isPreferenceVisible="true" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.socialnmobile.colordict" >
            </intent>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/search_engine_header">

        <ListPreference
            app:title="@string/websearch_name"
            app:summary="%s"
            app:key="@string/search_engine_key"
            app:defaultValue="@string/default_search_value"
            app:entries="@array/search_engine_entries"
            app:entryValues="@array/search_engine_values">
        </ListPreference>

    </PreferenceCategory>

</PreferenceScreen>
